--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - run: echo "J'effectue mes tests"
-      - run: exit 1 
+      - run: echo "toto"
       - name: Je liste mes fichiers 
         run: ls 
 
