--- a/.github/workflows/mon-workflow.yml
+++ b/.github/workflows/mon-workflow.yml
@@ -6,11 +6,16 @@ jobs:
   toto-job:
     runs-on: ubuntu-latest
     steps:
-  
+      - uses: actions/checkout@v2
       - name: list file directory
         run: ls
+      - uses: actions/setup-node@v2
       - name: change permission install.sh
         run: chmod 711 ./.github/scripts/install.sh
       - name: Execute script install
         run: ./.github/scripts/install.sh
         shell: bash 
+  x-job: 
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "J'envoi un email au CP comme quoi les tests se sont bien passé"
