Add workflow test

--- a/.github/workflows/step.yml
+++ b/.github/workflows/step.yml
@@ -9,16 +9,19 @@ jobs:
       - run: echo "Je fais l'install"
 
   build:
+    needs: install
     runs-on: ubuntu-latest
     steps:
       - run: echo "Je fais le build"
 
   test-unitaire:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - run: echo "Je fais le TU"
 
   test-fonctionel:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - run: echo "Je fais le TF"
