--- a/.github/workflows/step.yml
+++ b/.github/workflows/step.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/setup-node@v2
         with: 
           node-version: ${{ matrix.node }}
-        run: echo "Je test sur la version de node ${{ matrix.node }}"
+      - run: echo "Je test sur la version de node ${{ matrix.node }}"
 
   test-fonctionel:
     needs: test-unitaire
