--- a/.github/workflows/step.yml
+++ b/.github/workflows/step.yml
@@ -3,28 +3,28 @@ on:
   push:
 
 jobs: 
-  install: 
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Je fais l'install"
+  # install: 
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: echo "Je fais l'install"
 
-  build:
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Je fais le build"
+  # build:
+  #   needs: install
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: echo "Je fais le build"
 
-  test-unitaire:
-    needs: build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [6, 8, 10]
-    steps:
-      - uses: actions/setup-node@v2
-        with: 
-          node-version: ${{ matrix.node }}
-      - run: echo "Je test sur la version de node ${{ matrix.node }}"
+  # test-unitaire:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       node: [6, 8, 10]
+  #   steps:
+  #     - uses: actions/setup-node@v2
+  #       with: 
+  #         node-version: ${{ matrix.node }}
+  #     - run: echo "Je test sur la version de node ${{ matrix.node }}"
 
   test-fonctionel:
     needs: test-unitaire
