Add workflow test

--- a/.github/workflows/step.yml
+++ b/.github/workflows/step.yml
@@ -27,7 +27,7 @@ jobs:
   #     - run: echo "Je test sur la version de node ${{ matrix.node }}"
 
   test-fonctionel:
-    needs: test-unitaire
+    # needs: test-unitaire
     runs-on: ubuntu-latest
     strategy:
       matrix:
